--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/springboard
+spring.datasource.username = simplon
+spring.datasource.password = 1234
 
