--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+#jdbc datasource configuration
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/springboard
 spring.datasource.username = simplon
 spring.datasource.password = 1234
+
+spring.servlet.multipart.max-file-size=50000KB
+spring.servlet.multipart.max-request-size=50000KB
 
