--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,4 @@
-#jdbc datasource configuration
-spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/springboard
-spring.datasource.username = simplon
-spring.datasource.password = 1234
+spring.datasource.url=jdbc:mysql://simplon:1234@localhost:3306/springboard
 
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
-
