--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+java.runtime.version=17
+
 spring.datasource.url=jdbc:mysql://simplon:1234@localhost:3306/springboard
 
 spring.servlet.multipart.max-file-size=15MB
