--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 
-spring.datasource.url=jdbc:mysql://simplon:1234@localhost:3306/springboard
+spring.datasource.url=jdbc:mysql://baa1029a2df17f:d71382d8@eu-cdbr-west-02.cleardb.net:3306/heroku_b8df986084baf66
 
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=50MB
