--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+server.port=${PORT:8080}
 
 spring.datasource.url=jdbc:mysql://baa1029a2df17f:d71382d8@eu-cdbr-west-02.cleardb.net:3306/heroku_b8df986084baf66
 
