--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 server.port=${PORT:8080}
-spring.thymeleaf.prefix=classpath:/templates/
 
 spring.datasource.url=jdbc:mysql://baa1029a2df17f:d71382d8@eu-cdbr-west-02.cleardb.net:3306/heroku_b8df986084baf66
 
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=50MB
+
+# ===============================
+# = Thymeleaf configurations
+# ===============================
+spring.thymeleaf.enabled=true
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
