--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,6 @@ spring.servlet.multipart.max-request-size=50MB
 # ===============================
 # = Thymeleaf configurations
 # ===============================
-spring.thymeleaf.enabled=true
-spring.thymeleaf.check-template-location=true
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=LEGACYHTML5
-spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.cache=false
+spring.thymeleaf.template-loader-path: classpath:/templates
+spring.thymeleaf.suffix: .html
+spring.thymeleaf.cache: false
