--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,5 @@ spring.datasource.url=jdbc:mysql://baa1029a2df17f:d71382d8@eu-cdbr-west-02.clear
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=50MB
 
-# ===============================
-# = Thymeleaf configurations
-# ===============================
-spring.thymeleaf.suffix: .html
-spring.thymeleaf.cache: false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
