--- a/src/main/resources/static/upload/.gitignore
+++ b/src/main/resources/static/upload/.gitignore
@@ -1,2 +1,6 @@
 *
+!cdc24b20-0fcd-43c6-a564-39a12e4926b7_.mp3
+!80ed31ae-04e3-4995-a6db-8c664c82cbe2_.mp3
+!6d60a033-e5a9-47da-9d7f-b0b84c483317_.mp3
+!5accee06-1d4b-45de-9acd-af5cc55b95c9_.jpg
 !.gitignore
